--- a/simulation.html
+++ b/simulation.html
@@ -13,10 +13,10 @@
     }
 </style>
 </head>
- 
+
 <body>
     <div class="sensor" type="heat" id="sensor-0"><span>0</span></div>
-    <div class="sensor" type="heat" id="sensor-1"><span>0</span></div>
+    <div class="sensor" type="whack" id="sensor-1"><span>0</span></div>
     <div class="sensor" type="heat" id="sensor-2"><span>0</span></div>
     <div class="sensor" type="heat" id="sensor-3"><span>0</span></div>
     <div class="sensor" type="heat" id="sensor-4"><span>0</span></div>
