--- a/webui/manager.html
+++ b/webui/manager.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset="UTF-8" />
 <link rel="stylesheet" href="vendor/jjsonviewer.css">
-<script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
+<script src="/vendor/jquery-2.1.3.min.js" type="text/javascript"></script>
 <style>
     .sensor{
         width: 250px;
