--- a/webui/simulation.html
+++ b/webui/simulation.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <meta charset="UTF-8" />
-<script src="https://code.jquery.com/jquery-2.1.3.min.js" type="text/javascript"></script>
-<script src="https://code.jquery.com/pep/0.3.0/pep.js"></script>
+<script src="/vendor/jquery-2.1.3.min.js" type="text/javascript"></script>
+<script src="/vendor/pep-0.3.0.min.js"></script>
 <style>
     .sensor {
         width: 50px;
